ref #32909: move error and indexPage tests to controllerTest